# ROS2

./: .gitignore  README.md  frames_2024-10-01_14.12.16.gv  my_car.gv
bag/bag_cmd/: bag_cmd_0.db3  metadata.yaml
communication_mechanism/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
communication_mechanism/install/base_interface_demo/share/base_interface_demo/: local_setup.sh  package.sh  package.xml
communication_mechanism/install/cpp_action/lib/cpp_action/: cpp_action_client  cpp_action_server  minimal_action_client
communication_mechanism/install/cpp_action/share/cpp_action/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
communication_mechanism/install/cpp_param/lib/cpp_param/: demo_param  demo_param_client  demo_param_server
communication_mechanism/install/cpp_param/share/cpp_param/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
communication_mechanism/install/cpp_server/lib/cpp_server/: cpp_server_client  cpp_server_server
communication_mechanism/install/cpp_server/share/cpp_server/: package.sh
communication_mechanism/install/cpp_time/lib/cpp_time/: demo_time  demo_time_duration  demo_time_operation  demo_time_rate  demo_time_time
communication_mechanism/install/cpp_time/share/cpp_time/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
communication_mechanism/install/cpp_topic/lib/cpp_topic/: cpp_topic_listener  cpp_topic_listener_define  cpp_topic_talker  cpp_topic_talker_define
communication_mechanism/install/cpp_topic/share/cpp_topic/: package.bash  package.ps1  package.sh  package.xml  package.zsh
communication_mechanism/log/: latest_build
communication_mechanism/src/base_interface_demo/: CMakeLists.txt
communication_mechanism/src/cpp_action/: CMakeLists.txt
communication_mechanism/src/cpp_action/src/: cpp_action_client.cpp  cpp_action_server.cpp  minimal_action_client.cpp
communication_mechanism/src/cpp_param/: CMakeLists.txt
communication_mechanism/src/cpp_param/src/: demo_param.cpp  demo_param_client.cpp  demo_param_server.cpp
communication_mechanism/src/cpp_server/: CMakeLists.txt  package.xml
communication_mechanism/src/cpp_server/src/: cpp_server_client.cpp  cpp_server_server.cpp
communication_mechanism/src/cpp_time/: CMakeLists.txt  package.xml
communication_mechanism/src/cpp_time/src/: demo_time_duration.cpp  demo_time_operation.cpp  demo_time_rate.cpp  demo_time_time.cpp
communication_mechanism/src/cpp_topic/: CMakeLists.txt  package.xml
communication_mechanism/src/cpp_topic/src/: cpp_topic_listener.cpp  cpp_topic_listener_define.cpp  cpp_topic_talker.cpp  cpp_topic_talker_define.cpp
coordinate_transformations/install/: local_setup.sh  setup.sh
coordinate_transformations/install/cpp_tf_broadcaster/lib/cpp_tf_broadcaster/: cpp_dynamic_tf_broadcaster  cpp_static_tf_broadcaster  cpp_tf_point  demo
coordinate_transformations/install/cpp_tf_broadcaster/share/cpp_tf_broadcaster/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
coordinate_transformations/install/cpp_tf_listener/lib/cpp_tf_listener/: cpp_tf_listener_coordinates  demo
coordinate_transformations/install/cpp_tf_listener/share/cpp_tf_listener/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
coordinate_transformations/install/cpp_tf_turtle/lib/cpp_tf_turtle/: exer_spawn  exer_tf_broadcaster  exer_tf_listener
coordinate_transformations/install/cpp_tf_turtle/share/cpp_tf_turtle/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
coordinate_transformations/log/: latest_build
coordinate_transformations/src/cpp_tf_broadcaster/: CMakeLists.txt
coordinate_transformations/src/cpp_tf_broadcaster/src/: cpp_dynamic_tf_broadcaster.cpp  cpp_static_tf_broadcaster.cpp  cpp_tf_point.cpp  demo.cpp
coordinate_transformations/src/cpp_tf_listener/: CMakeLists.txt
coordinate_transformations/src/cpp_tf_listener/src/: cpp_tf_listener_coordinates.cpp  cpp_tf_listener_point.cpp  demo.cpp
coordinate_transformations/src/cpp_tf_turtle/: CMakeLists.txt  package.xml
coordinate_transformations/src/cpp_tf_turtle/launch/: exer.launch.py
coordinate_transformations/src/cpp_tf_turtle/src/: demo.cpp  exer_spawn.cpp  exer_tf_broadcaster.cpp  exer_tf_listener.cpp
rviz2/install/: local_setup.sh  setup.sh
rviz2/install/cpp_urdf/share/cpp_urdf/: package.bash  package.dsv  package.sh  package.zsh
rviz2/log/: latest_build
rviz2/src/cpp_urdf/: CMakeLists.txt
rviz2/src/cpp_urdf/launch/: display.launch.py
rviz2/src/cpp_urdf/rviz/: urdf.rviz
rviz2/src/cpp_urdf/src/: demo.cpp
rviz2/src/cpp_urdf/urdf/urdf/: demo_1_copy.urdf  demo_2_link.urdf  demo_5_exer.urdf
rviz2/src/cpp_urdf/urdf/xacro/: car.urdf.xacro  car_base.urdf.xacro
rviz2/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
rviz2/src/log/: latest_build
tools/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
tools/install/cpp_launch/share/cpp_launch/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
tools/install/cpp_rosbag/lib/cpp_rosbag/: bag_reader  bag_writer  demo
tools/install/cpp_rosbag/share/cpp_rosbag/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
tools/log/: latest_build
tools/my_bag/: metadata.yaml  my_bag_0.db3
tools/src/cpp_launch/: CMakeLists.txt  package.xml
tools/src/cpp_launch/launch/py/: demo_1.launch.py  py_2_cmd_launch.py  (+3 more)
tools/src/cpp_rosbag/: CMakeLists.txt
tools/src/cpp_rosbag/src/: bag_reader.cpp  bag_writer.cpp  demo.cpp
turtle/install/: local_setup.sh  setup.sh
turtle/log/: latest_build
turtle/src/demo_topic/: CMakeLists.txt  package.xml
turtle/src/demo_topic/src/: pose_topic.cpp
turtle/src/exercise/: CMakeLists.txt
turtle/src/exercise/launch/: exe_pub_sub.launch.py
turtle/src/exercise/src/: exe_action.cpp  exe_pub_sub.cpp
(+80 files in other folders)
