cmake_minimum_required(VERSION 3.8)
project(cpp_action)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(rclcpp_action REQUIRED)
find_package(base_interface_demo REQUIRED)

add_executable(cpp_action_server src/cpp_action_server.cpp)
add_executable(cpp_action_client src/cpp_action_client.cpp)
add_executable(minimal_action_client src/minimal_action_client.cpp)
target_include_directories(cpp_action_server PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  $<INSTALL_INTERFACE:include>)
target_include_directories(cpp_action_client PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  $<INSTALL_INTERFACE:include>)
target_include_directories(minimal_action_client PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  $<INSTALL_INTERFACE:include>)

target_compile_features(cpp_action_server PUBLIC c_std_99 cxx_std_17)  # Require C99 and C++17

ament_target_dependencies(
  cpp_action_server
  "rclcpp"
  "rclcpp_action"
  "base_interface_demo"
)
ament_target_dependencies(
  cpp_action_client
  "rclcpp"
  "rclcpp_action"
  "base_interface_demo"
)
ament_target_dependencies(
  minimal_action_client
  "rclcpp"
  "rclcpp_action"
  "base_interface_demo"
)

install(TARGETS cpp_action_server
  DESTINATION lib/${PROJECT_NAME})
install(TARGETS cpp_action_client
  DESTINATION lib/${PROJECT_NAME})
install(TARGETS minimal_action_client
  DESTINATION lib/${PROJECT_NAME})
  
if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
